--- a/package.json
+++ b/package.json
@@ -26,17 +26,17 @@
   },
   "homepage": "https://github.com/decentraland/redux-persistence#readme",
   "dependencies": {
-    "lodash": "^4.17.14",
-    "redux-actions": "^2.6.5",
-    "redux-storage-merger-simple": "^1.0.5"
-  },
-  "devDependencies": {
     "@types/lodash": "^4.14.136",
     "@types/node": "^12.6.8",
     "@types/redux-actions": "^2.6.1",
     "@types/sinon": "^7.0.13",
+    "lodash": "^4.17.14",
+    "redux-actions": "^2.6.5",
+    "redux-storage-merger-simple": "^1.0.5",
+    "fp-future": "^1.0.1"
+  },
+  "devDependencies": {
     "ava": "^2.2.0",
-    "fp-future": "^1.0.1",
     "prettier": "^1.18.2",
     "semantic-release": "^15.13.18",
     "sinon": "^7.3.2",
