fix: update types

--- a/package.json
+++ b/package.json
@@ -28,12 +28,11 @@
   "dependencies": {
     "@types/lodash": "^4.14.136",
     "@types/node": "^12.6.8",
-    "@types/redux-actions": "^2.6.1",
     "@types/sinon": "^7.0.13",
+    "fp-future": "^1.0.1",
     "lodash": "^4.17.14",
-    "redux-actions": "^2.6.5",
     "redux-storage-merger-simple": "^1.0.5",
-    "fp-future": "^1.0.1"
+    "typesafe-actions": "^4.4.2"
   },
   "devDependencies": {
     "ava": "^2.2.0",
